changed background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --font-outfit: "Outfit", "Outfit Placeholder", sans-serif;
 
   /* 🎨 Core colors */
-  --color-background: #1A141C;
+  --color-background: #18171C;
   --color-surface: #054066;
   --color-accent: #6A6FDB;
   --color-accent-light: #719EA8;
